## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = foreign

CPPFLAGS = @CPPFLAGS@ -I${top_srcdir}/include

noinst_LIBRARIES = libgputils.a

libgputils_a_SOURCES =\
	gparchive.c \
	gpcod.c \
	gpcoffgen.c \
	gpcofflink.c \
	gpdis.c \
	gpmemory.c \
	gpmessage.c \
	gpopcode.c \
	gpprocessor.c \
	gpreadhex.c \
	gpreadobj.c \
	gpsymbol.c \
	gpsystem.c \
	gpwritehex.c \
	gpwriteobj.c \
	gparchive.h \
	gpcod.h \
        gpcoff.h \
	gpcoffgen.h \
	gpcofflink.h \
	gpdis.h \
	gpmemory.h \
	gpmessage.h \
	gpopcode.h \
	gpprocessor.h \
	gpreadhex.h \
	gpreadobj.h \
	gpsymbol.h \
	gpsystem.h \
	gptypes.h \
	gpwritehex.h \
	gpwriteobj.h \
	libgputils.h
