## Process this file with automake to produce Makefile.in

AM_CPPFLAGS =\
	-I$(top_srcdir)/include \
	-DHEADER_PATH=\"@GPUTILS_HEADER_PATH@\" \
	-DLKR_PATH=\"@GPUTILS_LKR_PATH@\" \
	-DLIB_PATH=\"@GPUTILS_LIB_PATH@\"

noinst_LIBRARIES = libgputils.a

libgputils_a_SOURCES =\
	gparchive.c \
	gparchive.h \
	gpcfg.c \
	gpcfg.h \
	gpcfg-table.c \
	gpcod.c \
	gpcod.h \
	gpcoff.h \
	gpcoffgen.c \
	gpcoffgen.h \
	gpcofflink.c \
	gpcofflink.h \
	gpcoffopt.c \
	gpcoffopt.h \
	gpdis.c \
	gpdis.h \
	gphash.c \
	gphash.h \
	gplist.c \
	gplist.h \
	gpmemory.c \
	gpmemory.h \
	gpmessage.c \
	gpmessage.h \
	gpopcode.c \
	gpopcode.h \
	gpprocessor.c \
	gpprocessor.h \
	gpreadhex.c \
	gpreadhex.h \
	gpreadobj.c \
	gpreadobj.h \
	gpreg-table.c \
	gpregister.c \
	gpregister.h \
	gpsym.c \
	gpsym.h \
	gpsymbol.c \
	gpsymbol.h \
	gpsystem.c \
	gpsystem.h \
	gptypes.h \
	gpwritehex.c \
	gpwritehex.h \
	gpwriteobj.c \
	gpwriteobj.h \
	libgputils.h
